# vapt-env

./: .dockerignore  .env.example  .gitignore  AISHA_RL_Training_Colab.ipynb  AISHA_TRAINING_NOTEBOOK.md  BLOG.md  COMPLETION_STATUS.txt  Dockerfile  FINAL_SUBMISSION_CHECKLIST.md  GENERATE_PLOTS_FINAL_SUMMARY.txt  GENERATE_PLOTS_INDEX.md  GENERATE_PLOTS_QUICKSTART.md  GENERATE_PLOTS_SUMMARY.md  PACKAGE_SUMMARY.txt  QUICK_START.md  README.md  SUBMISSION_QA_REPORT.md  TRAINING_PACKAGE_INDEX.md  VAPT_env_BLOG_POST_FINAL.md  __init__.py  aisha_rl_training.py  client.py  colab_eval_hybrid.py  colab_eval_v3.py  conftest.py  convert_to_notebook.py  generate_plots.py  generate_submission_plots.py  inference.py  models.py  openenv.yaml  pyproject.toml
dataset/: dataset_info.json  trajectories.jsonl
docs/: WEAKNESSES.md
docs/HACKATHON/: 00-winning-strategy.md  01-meta-pytorch-openenv-winners.md  02-cerebral-valley-patterns.md  03-devpost-devfolio-winners.md  04-emotional-storytelling-winners.md  05-openenv-ecosystem.md  06-tech-stack-deep-dive.md  07-hackathon-intent-reverse-engineered.md  08-strategic-synthesis.md
examples/: custom_scenarios.py  demo_multiagent.py  difficulty_comparison.py  parameter_testing.py
gradio_ui/: README.md  app.py  requirements.txt
scripts/: build_trajectory_dataset.py  deploy_gradio_space.py  generate_journey_plots.py  push_model_card.py
server/: Dockerfile  __init__.py  app.py  grader.py  requirements.txt  scenarios.py  security_audit_env_environment.py  tools.py
tests/: conftest.py  test_environment.py  test_generator.py  test_grader.py
(+48 files in other folders)
